# Sovereign-Network-Pc-Browser

./: .env.generated.json  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
ios/: GeneratedConfig.swift
scripts/: generate-config.cjs
src/: App.tsx  config.ts  globals.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: identity.rs  identity_engine.rs  main.rs  quic.rs  quic_engine.rs  zhtp_auth.rs  zhtp_codec.rs  zhtp_framing.rs  zhtp_request.rs  zhtp_types.rs
src-tauri/src/zhtp_auth_request/: mod.rs
src/components/: Web4View.tsx  index.ts
src/constants/: index.ts
src/context/: ApiContext.tsx  AuthContext.tsx  SidebarContext.tsx  ThemeContext.tsx  ToastContext.tsx  index.ts
src/hooks/: index.ts  useAddressBook.ts  useApi.ts  useAsyncData.ts  useAuth.ts  useChainReregistration.ts  useDAOStats.ts  useDaoStakes.ts  useDebounce.ts  useIdentityCleanup.ts  useNativeSettings.ts  useNetworkNotices.ts  useNetworkTopology.ts  useNodeConnection.ts  useNodeConnectionStatus.ts  useOracleData.ts  usePersistedState.ts  usePoUW.ts  usePouwStatus.ts  useRemoteAnnouncement.ts  useRewardCounter.ts  useTokenOperations.ts  useTokenRegistry.ts  useTrendingDapps.ts  useTrendingTokens.ts  useUserTokenBalances.ts  useWalletBalance.ts  useWalletList.ts
src/i18n/: i18n.ts  index.ts  useTranslation.ts
src/lib-client-react-native-js/: PoUWController.ts  index.ts
src/native/: AsyncStorageShim.ts  Keychain.ts  LinearGradientShim.tsx  NativeFileSystem.ts  NativeIdentityProvisioning.ts  NativeQuic.ts  NativeQuicSession.ts  NativeStorage.ts  SafeAreaShim.tsx  index.ts
src/native_mobile/: PoUW.ts
src/navigation/: DesktopNavigator.tsx  DevPortalNavigator.tsx  ExplorerNavigator.tsx  RootNavigator.tsx  SIDNavigator.tsx  SovSwapNavigator.tsx
src/screens/: AppDetailScreen.tsx  BackupIdentityScreen.tsx  BiometricVerificationScreen.tsx  BookmarksScreen.tsx  BrowserAuthScreen.tsx  BrowserScreen.tsx  BuyCryptoScreen.tsx  ClaimUBIScreen.tsx  ConfirmTransactionScreen.tsx  CreateIdentityScreen.tsx  CreateProposalScreen.tsx  DAOScreen.tsx  DappsScreen.tsx  DappsSearchResultsScreen.tsx  DashboardScreen.tsx  DeveloperPortalScreen.tsx  DomainDetailScreen.tsx  DomainManagementScreen.tsx  DomainRegistrationScreen.tsx  FavoritesScreen.tsx  HistoryScreen.tsx  IdentityScreen.tsx  IdentitySettingsScreen.tsx  MigrationSeedScreen.tsx  MyDomainsScreen.tsx  MyStorageScreen.tsx  MyTokensScreen.tsx  OperateNodesScreen.tsx  PoUWScreen.tsx  ProfileEditScreen.tsx  ProfileScreen.tsx  ProposalDetailScreen.tsx  QRScanScreen.tsx  ReceiveTokensScreen.tsx  RecoverIdentityScreen.tsx  RegisterDaoScreen.tsx  SIDScreen.tsx  SeedPhraseScreen.tsx  SendTokensScreen.tsx  SettingsScreen.tsx  (+11 more)
src/services/: AddressBookService.ts  AppService.ts  BondingCurveService.ts  BrowserAuthService.ts  CameraPermission.ts  ChainBindingStorage.ts  ChainInfoService.ts  CoinmeService.ts  (+34 more)
(+157 files in other folders)
