[package]
name = "sovereign-network-desktop"
version = "0.1.0"
description = "Sovereign Network Desktop Application"
authors = ["Sovereign Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
url = "2.5"
hex = "0.4"
base64 = "0.22"

# Core Sovereign Network dependencies (linked from sibling directory)
lib-network = { path = "../../The-Sovereign-Network/lib-network" }
lib-identity = { path = "../../The-Sovereign-Network/lib-identity" }
lib-crypto = { path = "../../The-Sovereign-Network/lib-crypto" }
lib-blockchain = { path = "../../The-Sovereign-Network/lib-blockchain" }
lib-client = { path = "../../The-Sovereign-Network/lib-client" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
