[package]
name = "sovereign-network-desktop"
version = "0.1.0"
description = "Sovereign Network Desktop Application"
authors = ["Sovereign Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
url = "2.5"
hex = "0.4"
base64 = "0.22"

# Quinn for QUIC - pure Rust, easier cross-compilation
quinn = "0.11"
# Rustls for TLS with ring
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-platform-verifier = "0.3"
webpki-roots = "0.26"
# For JSON serialization
bincode = "1.3"
# CBOR serialization (for ZHTP protocol)
ciborium = "0.2"
# Hashing and Auth
blake3 = "1.5"
sha2 = "0.10"
sha3 = "0.10"
hkdf = "0.12"
hmac = "0.12"
x509-parser = "0.16"
once_cell = "1.19"

# Core Sovereign Network dependencies (linked from sibling directory)
lib-network = { path = "../../The-Sovereign-Network/lib-network" }
lib-identity = { path = "../../The-Sovereign-Network/lib-identity" }
lib-crypto = { path = "../../The-Sovereign-Network/lib-crypto" }
lib-blockchain = { path = "../../The-Sovereign-Network/lib-blockchain" }
lib-client = { path = "../../The-Sovereign-Network/lib-client" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
